build/log/idf_py_stderr_output_65034
/home/pi/wifiRelay_2/main/wifiRelay.c: In function 'reset_button_task':
/home/pi/wifiRelay_2/main/wifiRelay.c:732:2: error: implicit declaration of function 'reset_wifi_credentials'; did you mean 'clear_wifi_credentials'? [-Wimplicit-function-declaration]
  732 |  reset_wifi_credentials();
      |  ^~~~~~~~~~~~~~~~~~~~~~
      |  clear_wifi_credentials
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:87: esp-idf/main/CMakeFiles/__idf_main.dir/wifiRelay.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:6157: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:149: all] Error 2
